@@ -1,4 +1,4 @@
-scriptsdir = @pythondir@/lib_christine
+scriptsdir = @PYTHON_LIB_DIR@/lib_christine
 
 scripts_DATA=__init__.py \
 gtk_misc.py \
@@ -23,12 +23,13 @@ DISTFILES= Makefile.in \
 		   libs_christine.py.in \
 		   clibrary.c \
 		   plugins.py.in \
+		   christine.py.in \
 		   $(scripts_DATA) 
 
 
 pkgdatadir=${datadir}
 pkgsysconfdir=${sysconfdir}
-pythonlibdir = @prefix@/include/python@PYTHON_VERSION@/
+pythonincludedir = @PYTHON_INCLUDE_DIR@
 usr_libdir = @includedir@
 
 programname=@PROGRAM_NAME@
@@ -57,7 +58,8 @@ libs_christine.py: Makefile $(srcdir)/libs_christine.py.in
 	$(edit) $(srcdir)/libs_christine.py.in > libs_christine.py
 
 clibrary.so: Makefile $(srcdir)/clibrary.c
-	gcc -Wall ${CFLAGS} -I${pythonlibdir} -I${usr_libdir} -c -o clibrary.o clibrary.c && gcc -shared clibrary.o -o clibrary.so -L${pythonlibdir}
+	gcc -Wall ${CFLAGS} -I${pythonincludedir} -I${usr_libdir} -c -o clibrary.o clibrary.c
+	gcc -shared clibrary.o -o clibrary.so -L${pythonincludedir}
 
 christine.py: Makefile $(srcdir)/christine.py.in
 	    $(edit) $(srcdir)/christine.py.in > christine.py
